[package]
name = "platform_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.26.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
color-eyre = "0.6.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[workspace]
resolver = "2"
